fixed displaying modal window on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,8 @@ p {
   min-width: 400px;
   max-width: 90%;
   height: auto;
+  max-height: 100%;
+  overflow: auto;
   z-index: 2000;
   visibility: hidden;
   backface-visibility: hidden;
