--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -49,6 +49,8 @@
   min-width: 400px;
   max-width: 90%;
   height: auto;
+  max-height: 100%;
+  overflow: auto;
   z-index: 2000;
   visibility: hidden;
   backface-visibility: hidden;
